k8s/server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: flopachat
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 5000
      targetPort: 5000
