k8s/stats-service.yml
apiVersion: v1
kind: Service
metadata:
  name: stats-service
  namespace: flopachat
spec:
  type: ClusterIP
  selector:
    app: stats-service
  ports:
    - port: 4000
      targetPort: 4000
