k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: flopachat
spec:
  ingressClassName: nginx
  rules:
    - host: marketplace.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 5000
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: server-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
